test/resources/valid/com/boothj5/jarchexample/application/address/service/AddressService.java
package com.boothj5.jarchexample.application.address.service;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.address.repository.AddressRepository;
