test/resources/invalid/com/boothj5/jarchexample/application/telephonenumber/facade/TelephoneNumberFacade.java
package com.boothj5.jarchexample.application.telephonenumber.facade;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.telephonenumber.service.TelephoneNumberService;